# rust-by-building

./: .gitignore  404.html  Cargo.toml  README.md  a.txt  appendix-offline-docs.html  appendix-omitted.html  appendix-rbb.html  index.html  intro.html  print.html  projects.html  searcher-09f2665d.js  searchindex-27bbe08e.js  searchindex-34a55974.js  searchindex-4786004b.js  searchindex-eb2beea3.js  searchindex-f5fe6ab5.js  toc-27627e6e.js  toc-41e41280.js  toc-c78bbd51.js  toc.html
.cargo/: config.toml
ai/: 01-what-are-llms.html  02-apis-tokens.html  03-tool-calling.html  04-agent-loop.html  05-first-llm-call.html  06-first-tool.html  07-multiple-tools.html  08-todo-list.html
async/: 01-cost-of-threads.html  02-nonblocking-io.html  03-event-loop.html  04-futures.html  05-async-await.html  06-runtime.html  07-first-async.html  08-tasks.html  09-async-io.html  10-async-channels.html  11-join-select.html  12-async-weather.html  13-async-file-search.html
async-chat/: 01-accept.html  02-broadcast.html  overview.html
ball-moves/: 01-hello-macroquad.html  02-vec2.html  03-operator-overloading.html  04-body.html  05-integration.html  06-wall-bouncing.html  overview.html  physics-primer.html
book/: book.toml
boxes/: overview.html
caesar/: 01-print-variables.html  02-chars-arithmetic.html  03-functions.html  04-iteration-strings.html  05-control-flow.html  06-final.html  overview.html
chat-server/: 01-accept.html  02-broadcast.html  03-client.html  (+1 more)
tools/rbb/: Cargo.toml
tools/rbb-admin/: Cargo.toml
tools/rbb-admin/src/: main.rs
tools/rbb/src/: main.rs  tui.rs
(+478 files in other folders)
