[workspace]
resolver = "2"
members = [
    "tools/rbb-core",
    "tools/rbb",
    "tools/rbb-admin",
    "lessons/*/project",
    "capstones/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
owo-colors = "4"
toml = "0.8"
